--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
         <h1>Event Schedule</h1>
         
         <!-- Form for adding/updating events -->
-        <form th:action="/api/event-schedules/{id}" method="post">
+        <form id="eventForm" action="#" method="post">
             <input type="hidden" id="eventId">
             <label for="date">Date:</label>
             <input type="date" id="date" name="date" required>
